--- a/PDS Info Update/Education Info.html
+++ b/PDS Info Update/Education Info.html
@@ -168,21 +168,19 @@
                 >
                   <div class="accordion-body">
                     <ul>
-                      <li><a href="app-emailbox.html">Add New Employee</a></li>
-                      <li>
+                      <li><a href="Add New Employee.html">Add New Employee</a></li>
                         <a href="Personal Info.html">Personal Information</a>
                       </li>
                       <li><a href="Spouse Info.html">Spouse Info.</a></li>
                       <li><a href="Children Info.html">Children Info.</a></li>
                       <li><a href="Language Skill.html">Language Skill </a></li>
                       <li><a href="Education Info.html">Education Info.</a></li>
-                      <li>
-                        <a href="Foreign Travel.html">Foreign Travel Info.</a>
+                      <li> <a href="Foreign Travel Info.html">Foreign Travel Info.</a>
                       </li>
                       <li><a href="Training Info.html">Training Info.</a></li>
-                      <li><a href="Service.html">Service Exam</a></li>
+                      <li><a href="Service Exam.html">Service Exam</a></li>
                       <li>
-                        <a href="/PDS Info Update/Affiliation.html"
+                        <a href="Affiliation.html"
                           >Affiliations</a
                         >
                       </li>
@@ -438,27 +436,7 @@
                           aria-label="Default select example"
                         >
                           <option value="1">SSC</option>
-                          <option value="2">HSC</option>
-                          <option value="8">B.Sc. Engg.</option>
-                          <option value="13">MSc</option>
-                          <option value="15">MBA</option>
-                          <option value="16">Diploma Engg.</option>
-                          <option value="17">PGD</option>
-                          <option value="18">AMIE</option>
-                          <option value="19">M Engg.</option>
-                          <option value="20">MDS</option>
-                          <option value="21">B.A</option>
-                          <option value="22">M.Sc. Engg.</option>
-                          <option value="23">PhD</option>
-                          <option value="24">Dakhil</option>
-                          <option value="25">MPSM</option>
-                          <option value="26">MCIPS</option>
-                          <option value="27">JSC</option>
-                          <option value="28">BBA</option>
-                          <option value="29">BCOM</option>
-                          <option value="30">MCOM</option>
-                          <option value="31">MES</option>
-                          <option value="32">Masters</option>
+                         
                         </select>
                       </div>
                       <div class="col-md-2">
