--- a/Reports/Current Posting.html
+++ b/Reports/Current Posting.html
@@ -160,8 +160,7 @@
                 >
                   <div class="accordion-body">
                     <ul>
-                      <li><a href="app-emailbox.html">Add New Employee</a></li>
-                      <li>
+                      <li><a href="Add New Employee.html">Add New Employee</a></li>
                         <a href="Personal Info.html">Personal Information</a>
                       </li>
                       <li><a href="Spouse Info.html">Spouse Info.</a></li>
@@ -172,8 +171,8 @@
                         <a href="Foreign Travel.html">Foreign Travel Info.</a>
                       </li>
                       <li><a href="Training Info.html">Training Info.</a></li>
-                      <li><a href="Service.html">Service Exam</a></li>
-                       <li><a href="/PDS Info Update/Affiliation.html">Affiliations</a></li>
+                      <li><a href="Service Exam.html">Service Exam</a></li>
+                       <li><a href="Affiliation.html">Affiliations</a></li>
                       <li><a href="Honours.html">Honours/Award</a></li>
                       <li><a href="Publications.html">Publication</a></li>
                       <li>
