--- a/Reports/PDS Printing.html
+++ b/Reports/PDS Printing.html
@@ -168,8 +168,7 @@
                 >
                   <div class="accordion-body">
                     <ul>
-                      <li><a href="app-emailbox.html">Add New Employee</a></li>
-                      <li>
+                      <li><a href="Add New Employee.html">Add New Employee</a></li>
                         <a href="Personal Info.html">Personal Information</a>
                       </li>
                       <li><a href="Spouse Info.html">Spouse Info.</a></li>
