--- a/PDS Info Update/Children Info.html
+++ b/PDS Info Update/Children Info.html
@@ -145,19 +145,17 @@
                 >
                   <div class="accordion-body">
                     <ul>
-                      <li><a href="app-emailbox.html">Add New Employee</a></li>
-                      <li>
+                      <li><a href="Add New Employee.html">Add New Employee</a></li>
                         <a href="Personal Info.html">Personal Information</a>
                       </li>
                       <li><a href="Spouse Info.html">Spouse Info.</a></li>
                       <li><a href="Children Info.html">Children Info.</a></li>
                       <li><a href="Language Skill.html">Language Skill </a></li>
                       <li><a href="Education Info.html">Education Info.</a></li>
-                      <li>
-                        <a href="Foreign Travel.html">Foreign Travel Info.</a>
+                      <li> <a href="Foreign Travel Info.html">Foreign Travel Info.</a>
                       </li>
                       <li><a href="Training Info.html">Training Info.</a></li>
-                      <li><a href="Service.html">Service Exam</a></li>
+                      <li><a href="Service Exam.html">Service Exam</a></li>
                       <li><a href="Affiliation.html">Affiliations</a></li>
                       <li><a href="Honours.html">Honours/Award</a></li>
                       <li><a href="Publications.html">Publication</a></li>
