--- a/PDS Info Update/Affiliation.html
+++ b/PDS Info Update/Affiliation.html
@@ -196,8 +196,8 @@
                       <li>
                         <a href="app-emailbox.html">Official Information</a>
                       </li>
-                      <li>
-                        <a href="app-emailbox.html">Promotion Particulars</a>
+                       <li>
+                        <a href="Promotion Particulars.html">Promotion Particulars</a>
                       </li>
                       <li>
                         <a href="app-emailbox.html">Disciplinary Actions</a>
