--- a/PDS Info Update/Previous Services.html
+++ b/PDS Info Update/Previous Services.html
@@ -73,74 +73,74 @@
                   data-bs-parent="#accordionExample"
                 >
                   <div class="accordion-body">
-					<ul>
-						<li><a href="Short PDS.html">Short PDS</a></li>
-						<li><a href="PDS Printing.html">PDS Printing</a></li>
-						<li>
-						  <a href="Search Officers.html">Search Officers</a>
-						</li>
-						<li><a href="Search Staffs.html">Search Staffs</a></li>
-						<li>
-						  <a href="Grade 9 & Above.html">Grade 9 & Above</a>
-						</li>
-						<li>
-						  <a href="Sub-Assistant Engineers.html"
-							>Sub-Assistent Engineer</a
-						  >
-						</li>
-						<li>
-						  <a href="Class 3 Employee.html">Class 3 Employees</a>
-						</li>
-						<li>
-						  <a href="Class 4 Employee.html">Class 4 Employees</a>
-						</li>
-						<li>
-						  <a href="Current Posting.html">Current Postings</a>
-						</li>
-						<li><a href="Posting Date.html">Posting Date</a></li>
-  
-						<li>
-						  <a href="Vacant Post Officers.html"
-							>Vacant Posts(Officers)</a
-						  >
-						</li>
-						<li>
-						  <a href="Vacant Post Staffs.html"
-							>Vacant Posts(Staff)</a
-						  >
-						</li>
-						<li>
-						  <a href="Officer In Deputation.html"
-							>Officers in Deputation</a
-						  >
-						</li>
-						<li>
-						  <a href="Officer In Lien.html">Officers on Lien</a>
-						</li>
-						<li>
-						  <a href="Officer In Reserve.html"
-							>Officers in Reserve</a
-						  >
-						</li>
-						<li>
-						  <a href="Officer In Foreign.html"
-							>Officers in Foreign Country</a
-						  >
-						</li>
-						<li>
-						  <a href="Officer On Leave.html">Officers on Leave</a>
-						</li>
-						<li>
-						  <a href="PRL Dates.html">PRL Dates of Officers</a>
-						</li>
-						<li><a href="Employee Added.html">Employee Added</a></li>
-						<li><a href="PDS Update.html">PDS Update List</a></li>
-						<li>
-						  <a href="Foreign Travel Report.html"
-							>Foreign Travel Reports</a
-						  >
-						</li>
-					  </ul>
+                    <ul>
+                      <li><a href="Short PDS.html">Short PDS</a></li>
+                      <li><a href="PDS Printing.html">PDS Printing</a></li>
+                      <li>
+                        <a href="Search Officers.html">Search Officers</a>
+                      </li>
+                      <li><a href="Search Staffs.html">Search Staffs</a></li>
+                      <li>
+                        <a href="Grade 9 & Above.html">Grade 9 & Above</a>
+                      </li>
+                      <li>
+                        <a href="Sub-Assistant Engineers.html"
+                          >Sub-Assistent Engineer</a
+                        >
+                      </li>
+                      <li>
+                        <a href="Class 3 Employee.html">Class 3 Employees</a>
+                      </li>
+                      <li>
+                        <a href="Class 4 Employee.html">Class 4 Employees</a>
+                      </li>
+                      <li>
+                        <a href="Current Posting.html">Current Postings</a>
+                      </li>
+                      <li><a href="Posting Date.html">Posting Date</a></li>
+
+                      <li>
+                        <a href="Vacant Post Officers.html"
+                          >Vacant Posts(Officers)</a
+                        >
+                      </li>
+                      <li>
+                        <a href="Vacant Post Staffs.html"
+                          >Vacant Posts(Staff)</a
+                        >
+                      </li>
+                      <li>
+                        <a href="Officer In Deputation.html"
+                          >Officers in Deputation</a
+                        >
+                      </li>
+                      <li>
+                        <a href="Officer In Lien.html">Officers on Lien</a>
+                      </li>
+                      <li>
+                        <a href="Officer In Reserve.html"
+                          >Officers in Reserve</a
+                        >
+                      </li>
+                      <li>
+                        <a href="Officer In Foreign.html"
+                          >Officers in Foreign Country</a
+                        >
+                      </li>
+                      <li>
+                        <a href="Officer On Leave.html">Officers on Leave</a>
+                      </li>
+                      <li>
+                        <a href="PRL Dates.html">PRL Dates of Officers</a>
+                      </li>
+                      <li><a href="Employee Added.html">Employee Added</a></li>
+                      <li><a href="PDS Update.html">PDS Update List</a></li>
+                      <li>
+                        <a href="Foreign Travel Report.html"
+                          >Foreign Travel Reports</a
+                        >
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -169,18 +169,24 @@
                 >
                   <div class="accordion-body">
                     <ul>
-                      <li><a href="Add New Employee.html">Add New Employee</a></li>
+                      <li>
+                        <a href="Add New Employee.html">Add New Employee</a>
+                      </li>
+                      <li>
                         <a href="Personal Info.html">Personal Information</a>
                       </li>
                       <li><a href="Spouse Info.html">Spouse Info.</a></li>
                       <li><a href="Children Info.html">Children Info.</a></li>
                       <li><a href="Language Skill.html">Language Skill </a></li>
                       <li><a href="Education Info.html">Education Info.</a></li>
-                      <li> <a href="Foreign Travel Info.html">Foreign Travel Info.</a>
+                      <li>
+                        <a href="Foreign Travel Info.html"
+                          >Foreign Travel Info.</a
+                        >
                       </li>
                       <li><a href="Training Info.html">Training Info.</a></li>
                       <li><a href="Service Exam.html">Service Exam</a></li>
-                       <li><a href="Affiliation.html">Affiliations</a></li>
+                      <li><a href="Affiliation.html">Affiliations</a></li>
                       <li><a href="Honours.html">Honours/Award</a></li>
                       <li><a href="Publications.html">Publication</a></li>
                       <li>
@@ -189,8 +195,8 @@
                       <li>
                         <a href="app-emailbox.html">Official Information</a>
                       </li>
-                      <li>
-                        <a href="app-emailbox.html">Promotion Particulars</a>
+                       <li>
+                        <a href="Promotion Particulars.html">Promotion Particulars</a>
                       </li>
                       <li>
                         <a href="app-emailbox.html">Disciplinary Actions</a>
@@ -300,52 +306,284 @@
           </li>
         </ul>
       </div>
-      <!--start page wrapper -->
-      <div class="page-wrapper">
-        <div class="page-content col-md-8">
-          <div class="row">
-            <div class="col-xl-7 mx-auto">
-              <div class="card">
-                <div class="card-body p-5">
-                  <div class="card-title align-items-center">
-                    <h4
-                      class="mb-4 text-dark text-center text-decoration-underline"
-                    >
-                      Previous Services: (Before Gazetted Post)
-                    </h4>
-                    <h6 class="mb-0 text-dark">Search by Gradation No.:</h6>
-                  </div>
-                  <hr />
 
-                  <form class="row g-3">
-                    <div class="col-md-12">
-                      <label for="inputClass" class="form-label"
-                        >Enter Gradation No.:
-                      </label>
-                      <input
-                        type="text"
-                        name="txtSearchGradation"
-                        size="15"
-                        maxlength="16"
-                        value=""
-                      />
-                      <button type="submit" class="btn btn-success px-2 py-0">
-                        GO
+      <!--start page wrapper -->
+
+      <div class="page-content col-md-8">
+        <div class="row">
+          <div class="col-xl-8 mx-auto">
+            <div class="card">
+              <div class="card-body">
+                <div class="card-title align-items-center">
+                  <h4
+                    class="mb-4 text-dark text-center text-decoration-underline"
+                  >
+                    Previous Services: (Before Gazetted Post)
+                  </h4>
+                </div>
+
+                <form class="row g-3">
+                  <div
+                    class="col-md-12 d-flex align-items-center justify-content-center"
+                  >
+                    <label for="inputClass" class="form-label mx-2"
+                      >Search by Gradation No.:
+                    </label>
+                    <input
+                      style="width: 150px"
+                      class="form-control"
+                      type="text"
+                      name="txtSearchGradation"
+                      maxlength="16"
+                      value=""
+                    />
+                    <button
+                      type="submit"
+                      class="btn btn-success mx-2 px-2 py-0"
+                    >
+                      GO
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <table class="table table-bordered">
+                  <thead>
+                    <tr class="table-secondary">
+                      <td scope="col">Employer</td>
+                      <td scope="col">Employer Address</td>
+                      <td scope="col">Type of Service</td>
+                      <td scope="col">Position</td>
+                      <td scope="col">From</td>
+                      <td scope="col">To</td>
+                      <td scope="col"></td>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+
+                      <td></td>
+
+                      <td>
+                        <button
+                          type="submit"
+                          class="btn btn-outline-success py-0"
+                        >
+                          Edit
+                        </button>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body mx-auto">
+                <div class="card-title">
+                  <h5 class="text-dark text-center">Enter Service Info</h5>
+                  <hr />
+                </div>
+                <form>
+                  <div class="row align-items-center g-2">
+                    <div class="row">
+                      <div class="col-md-2">
+                        <label for="inputClass" class="col-form-label"
+                          >Employer</label
+                        >
+                      </div>
+                      <div class="col-md-3">
+                        <input
+                          class="form-control"
+                          type="text"
+                          maxlength="50"
+                          value=""
+                        />
+                      </div>
+                      <div class="col-md-3">
+                        <label for="inputClass" class="col-form-label mb-2"
+                          >Employer Address
+                        </label>
+                      </div>
+                      <div class="col-md-4">
+                        <textarea
+                          class="form-control"
+                          id="exampleFormControlTextarea1"
+                          rows="1"
+                        ></textarea>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col-md-2">
+                        <label for="inputClass" class="col-form-label"
+                          >Type of Service</label
+                        >
+                      </div>
+                      <div class="col-md-3">
+                        <input
+                          class="form-control"
+                          type="text"
+                          maxlength="50"
+                          value=""
+                        />
+                      </div>
+                      <div class="col-md-3">
+                        <label for="inputClass" class="col-form-label"
+                          >Position</label
+                        >
+                      </div>
+                      <div class="col-md-4">
+                        <input
+                          class="form-control"
+                          type="text"
+                          maxlength="50"
+                          value=""
+                        />
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col-md-2">
+                        <label for="inputClass" class="col-form-label"
+                          >Form</label
+                        >
+                      </div>
+                      <div class="col-md-3">
+                        <input class="form-control" type="date" />
+                      </div>
+                      <div class="col-md-3">
+                        <label for="inputClass" class="col-form-label"
+                          >To</label
+                        >
+                      </div>
+                      <div class="col-md-3">
+                        <input class="form-control" type="date" />
+                      </div>
+                    </div>
+
+                    <div class="row"></div>
+
+                    <div class="col-md-12 text-center">
+                      <button type="submit" class="btn btn-success py-0">
+                        Add
                       </button>
                     </div>
-                  </form>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body mx-auto">
+                <div class="card-title">
+                  <h5 class="text-dark text-center">Edit Service Info</h5>
+                  <hr />
                 </div>
+                <form>
+                  <div class="row align-items-center g-2">
+                    <div class="row">
+                      <div class="col-md-2">
+                        <label for="inputClass" class="col-form-label"
+                          >Employer</label
+                        >
+                      </div>
+                      <div class="col-md-3">
+                        <input
+                          class="form-control"
+                          type="text"
+                          maxlength="50"
+                          value=""
+                        />
+                      </div>
+                      <div class="col-md-3">
+                        <label for="inputClass" class="col-form-label mb-2"
+                          >Employer Address
+                        </label>
+                      </div>
+                      <div class="col-md-4">
+                        <textarea
+                          class="form-control"
+                          id="exampleFormControlTextarea1"
+                          rows="1"
+                        ></textarea>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col-md-2">
+                        <label for="inputClass" class="col-form-label"
+                          >Type of Service</label
+                        >
+                      </div>
+                      <div class="col-md-3">
+                        <input
+                          class="form-control"
+                          type="text"
+                          maxlength="50"
+                          value=""
+                        />
+                      </div>
+                      <div class="col-md-3">
+                        <label for="inputClass" class="col-form-label"
+                          >Position</label
+                        >
+                      </div>
+                      <div class="col-md-4">
+                        <input
+                          class="form-control"
+                          type="text"
+                          maxlength="50"
+                          value=""
+                        />
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col-md-2">
+                        <label for="inputClass" class="col-form-label"
+                          >Form</label
+                        >
+                      </div>
+                      <div class="col-md-3">
+                        <input class="form-control" type="date" />
+                      </div>
+                      <div class="col-md-3">
+                        <label for="inputClass" class="col-form-label"
+                          >To</label
+                        >
+                      </div>
+                      <div class="col-md-3">
+                        <input class="form-control" type="date" />
+                      </div>
+                    </div>
+
+                    <div class="row"></div>
+
+                    <div class="col-md-12 text-center">
+                      <button type="submit" class="btn btn-success py-0">
+                        Edit
+                      </button>
+                    </div>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
         </div>
-
-        <!--end page wrapper -->
-
-        <footer class="page-footer">
-          <p class="mb-0">Designed & Developed BY Shell Technologies</p>
-        </footer>
       </div>
+
+      <!--end page wrapper -->
+      <!--start overlay-->
+
+      <footer class="page-footer">
+        <p class="mb-0">Designed & Developed BY Shell Technologies</p>
+      </footer>
     </div>
 
     <script
@@ -354,7 +592,7 @@
       crossorigin="anonymous"
     ></script>
     <!--plugins-->
-      <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
     <script src="/assets/plugins/simplebar/js/simplebar.min.js"></script>
     <script src="/assets/plugins/metismenu/js/metisMenu.min.js"></script>
     <script src="/assets/plugins/perfect-scrollbar/js/perfect-scrollbar.js"></script>
