--- a/PDS Info Update/Promotion Particulars.html
+++ b/PDS Info Update/Promotion Particulars.html
@@ -625,12 +625,12 @@
                       </div>
                     </div>
 
-                    <div class="row"></div>
-
-                    <div class="col-md-12 text-center">
-                      <button type="submit" class="btn btn-success py-0">
-                        Edit
-                      </button>
+                    <div class="row">
+                      <div class="col-md-12 text-center">
+                        <button type="submit" class="btn btn-success py-0">
+                          Edit
+                        </button>
+                      </div>
                     </div>
                   </div>
                 </form>
