--- a/Index.html
+++ b/Index.html
@@ -167,29 +167,29 @@
                 >
                   <div class="accordion-body">
                     <ul>
-                      <li><a href="Add New Employee.html">Add New Employee</a></li>
-                        <a href="Personal Info.html">Personal Information</a>
+                      <li><a href="/PDS Info Update/Add New Employee.html">Add New Employee</a></li>
+                        <a href="/PDS Info Update/Personal Info.html">Personal Information</a>
                       </li>
-                      <li><a href="Spouse Info.html">Spouse Info.</a></li>
-                      <li><a href="Children Info.html">Children Info.</a></li>
-                      <li><a href="Language Skill.html">Language Skill </a></li>
-                      <li><a href="Education Info.html">Education Info.</a></li>
+                      <li><a href="/PDS Info Update/Spouse Info.html">Spouse Info.</a></li>
+                      <li><a href="/PDS Info Update/Children Info.html">Children Info.</a></li>
+                      <li><a href="/PDS Info Update/Language Skill.html">Language Skill </a></li>
+                      <li><a href="/PDS Info Update/Education Info.html">Education Info.</a></li>
                       <li>
-                        <a href="Foreign Travel.html">Foreign Travel Info.</a>
+                        <a href="/PDS Info Update/Foreign Travel.html">Foreign Travel Info.</a>
                       </li>
-                      <li><a href="Training Info.html">Training Info.</a></li>
-                      <li><a href="Service Exam.html">Service Exam</a></li>
-                       <li><a href="Affiliation.html">Affiliations</a></li>
-                      <li><a href="Honours.html">Honours/Award</a></li>
-                      <li><a href="Publications.html">Publication</a></li>
+                      <li><a href="/PDS Info Update/Training Info.html">Training Info.</a></li>
+                      <li><a href="/PDS Info Update/Service Exam.html">Service Exam</a></li>
+                       <li><a href="/PDS Info Update/Affiliation.html">Affiliations</a></li>
+                      <li><a href="/PDS Info Update/Honours.html">Honours/Award</a></li>
+                      <li><a href="/PDS Info Update/Publications.html">Publication</a></li>
                       <li>
-                        <a href="Previous Services.html">Previous Services</a>
+                        <a href="/PDS Info Update/Previous Services.html">Previous Services</a>
                       </li>
                       <li>
                         <a href="app-emailbox.html">Official Information</a>
                       </li>
                       <li>
-                        <a href="app-emailbox.html">Promotion Particulars</a>
+                        <a href="/PDS Info Update/Promotion Particulars.html">Promotion Particulars</a>
                       </li>
                       <li>
                         <a href="app-emailbox.html">Disciplinary Actions</a>
