--- a/PDS Info Update/Language Skill.html
+++ b/PDS Info Update/Language Skill.html
@@ -30,7 +30,7 @@
     <link href="/assets/css/app.css" rel="stylesheet" />
     <link href="/assets/css/icons.css" rel="stylesheet" />
 
-    <title>Search Officers</title>
+    <title></title>
   </head>
 
   <body>
@@ -193,10 +193,10 @@
                         <a href="Promotion Particulars.html">Promotion Particulars</a>
                       </li>
                       <li>
-                        <a href="app-emailbox.html">Disciplinary Actions</a>
+                        <a href="Displinary Action.html">Disciplinary Actions</a>
                       </li>
                       <li><a href="app-emailbox.html">ACR History</a></li>
-                      <li><a href="app-emailbox.html">leave History</a></li>
+                     <li><a href="Leave History.html">leave History</a></li>
                       <li><a href="app-emailbox.html">Posting</a></li>
                       <li><a href="app-emailbox.html">Lien Info.</a></li>
                       <li><a href="app-emailbox.html">Job Status</a></li>
@@ -411,16 +411,12 @@
                             style="width: 145px"
                           >
                             <option value="1">Bangla</option>
-                            <option value="2">English</option>
-                            <option value="3">Arabic</option>
-                            <option value="4">Hindi</option>
-                            <option value="5">Urdu</option>
-                            <option value="6">Russian</option>
+                            
                           </select>
                         </td>
-                        <td><input type="checkbox" name="chkRead" /></td>
-                        <td><input type="checkbox" name="chkWrite" /></td>
-                        <td><input type="checkbox" name="chkSpeak" /></td>
+                        <td> <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"></td>
+                        <td> <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"></td>
+                        <td> <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"></td>
                         <td>
                           <button type="submit" class="btn btn-success py-0">
                             Add
@@ -457,16 +453,12 @@
                             style="width: 145px"
                           >
                             <option value="1">Bangla</option>
-                            <option value="2">English</option>
-                            <option value="3">Arabic</option>
-                            <option value="4">Hindi</option>
-                            <option value="5">Urdu</option>
-                            <option value="6">Russian</option>
+                           
                           </select>
                         </td>
-                        <td><input type="checkbox" name="chkRead" /></td>
-                        <td><input type="checkbox" name="chkWrite" /></td>
-                        <td><input type="checkbox" name="chkSpeak" /></td>
+                        <td> <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"></td>
+                        <td> <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"></td>
+                        <td> <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"></td>
                         <td>
                           <button type="submit" class="btn btn-success py-0">
                             Edit
