--- a/PDS Info Update/Service Exam.html
+++ b/PDS Info Update/Service Exam.html
@@ -30,7 +30,7 @@
     <link href="/assets/css/app.css" rel="stylesheet" />
     <link href="/assets/css/icons.css" rel="stylesheet" />
 
-    <title>Search Officers</title>
+    <title></title>
   </head>
 
   <body>
@@ -194,10 +194,10 @@
                         <a href="Promotion Particulars.html">Promotion Particulars</a>
                       </li>
                       <li>
-                        <a href="app-emailbox.html">Disciplinary Actions</a>
+                        <a href="Displinary Action.html">Disciplinary Actions</a>
                       </li>
                       <li><a href="app-emailbox.html">ACR History</a></li>
-                      <li><a href="app-emailbox.html">leave History</a></li>
+                     <li><a href="Leave History.html">leave History</a></li>
                       <li><a href="app-emailbox.html">Posting</a></li>
                       <li><a href="app-emailbox.html">Lien Info.</a></li>
                       <li><a href="app-emailbox.html">Job Status</a></li>
