--- a/PDS Info Update/Displinary Action.html
+++ b/PDS Info Update/Displinary Action.html
@@ -320,7 +320,7 @@
                   <h4
                     class="mb-4 text-dark text-center text-decoration-underline"
                   >
-                    Promotion Particulars:
+                    Disciplinary Actions/Criminal Prosecutions:
                   </h4>
                 </div>
 
@@ -354,13 +354,13 @@
                 <table class="table table-bordered">
                   <thead>
                     <tr class="table-secondary">
-                      <td scope="col">Designation</td>
-                      <td scope="col">Nature of Prom</td>
-                      <td scope="col">Memo No.</td>
-                      <td scope="col">Memo Date</td>
-                      <td scope="col">Joining Date</td>
-                      <td scope="col">Pay Scale</td>
-                      <td scope="col">Posting</td>
+                      <td scope="col">Disciplinary Case Filed</td>
+                      <td scope="col">Proceeding Drawn</td>
+                      <td scope="col">Nature of Offence</td>
+                      <td scope="col">Punishment</td>
+                      <td scope="col">Date</td>
+                      <td scope="col">Remarks</td>
+
                       <td scope="col"></td>
                     </tr>
                   </thead>
@@ -370,7 +370,7 @@
                       <td></td>
                       <td></td>
                       <td></td>
-                      <td></td>
+
                       <td></td>
 
                       <td></td>
@@ -391,53 +391,49 @@
             <div class="card">
               <div class="card-body">
                 <div class="card-title">
-                  <h5 class="text-dark text-center">Enter Promotion Info</h5>
+                  <h5 class="text-dark text-center">
+                    Enter Disciplinary Actions Info
+                  </h5>
                   <hr />
                 </div>
                 <form>
                   <div class="row align-items-center g-2">
                     <div class="row">
+                      <div class="col-md-3 pe-0">
+                        <label for="inputClass" class="col-form-label"
+                          >Disciplinary Case Filed</label
+                        >
+                      </div>
+                      <div class="col-md-1 px-0">
+                        <input
+                          class="form-check-input mt-2"
+                          type="checkbox"
+                          value=""
+                          id="flexCheckDefault"
+                        />
+                      </div>
+                      <div style="margin-left: -5px" class="col-md-2 px-0">
+                        <label for="inputClass" class="col-form-label"
+                          >Proceeding Drawn</label
+                        >
+                      </div>
                       <div class="col-md-1">
-                        <label for="inputClass" class="col-form-label"></label>
-                      </div>
-                      <div class="col-md-2">
-                        <label for="inputClass" class="col-form-label"
-                          >Designation</label
-                        >
-                      </div>
-                      <div class="col-md-3">
-                        <select
-                          class="form-select"
-                          aria-label="Default select example"
-                        >
-                          <option value="1"></option>
-                        </select>
-                      </div>
-                      <div class="col-md-2">
-                        <label for="inputClass" class="col-form-label"
-                          >Nature of Prom</label
-                        >
-                      </div>
-                      <div class="col-md-3">
-                        <select
-                          class="form-select"
-                          aria-label="Default select example"
-                        >
-                          <option value="1"></option>
-                        </select>
+                        <input
+                          class="form-check-input mt-2"
+                          type="checkbox"
+                          value=""
+                          id="flexCheckDefault"
+                        />
                       </div>
                     </div>
 
                     <div class="row">
-                      <div class="col-md-1">
-                        <label for="inputClass" class="col-form-label"></label>
-                      </div>
-                      <div class="col-md-2">
+                      <div class="col-md-3 pe-0">
                         <label for="inputClass" class="col-form-label"
-                          >Memo No.</label
+                          >Nature of Offence</label
                         >
                       </div>
-                      <div class="col-md-3">
+                      <div class="col-md-3 px-0">
                         <input
                           class="form-control"
                           type="text"
@@ -445,59 +441,41 @@
                           value=""
                         />
                       </div>
-                      <div class="col-md-2">
+                      <div class="col-md-2 pe-0">
                         <label for="inputClass" class="col-form-label"
-                          >Memo Date</label
+                          >Punishment</label
                         >
                       </div>
-                      <div class="col-md-3">
-                        <input class="form-control" type="date" />
+                      <div class="col-md-4 px-0">
+                        <input
+                          class="form-control"
+                          type="text"
+                          maxlength="50"
+                          value=""
+                        />
                       </div>
                     </div>
 
                     <div class="row">
-                      <div class="col-md-1">
-                        <label for="inputClass" class="col-form-label"></label>
-                      </div>
-
-                      <div class="col-md-2">
+                      <div class="col-md-3 pe-0">
                         <label for="inputClass" class="col-form-label"
-                          >Joining Date</label
+                          >Date</label
                         >
                       </div>
-                      <div class="col-md-3">
+                      <div class="col-md-3 px-0">
                         <input class="form-control" type="date" />
                       </div>
-                      <div class="col-md-2">
+                      <div class="col-md-2 pe-0">
                         <label for="inputClass" class="col-form-label">
-                          Pay Scale
+                          Remarks
                         </label>
                       </div>
-                      <div class="col-md-3">
-                        <select
-                          class="form-select"
-                          aria-label="Default select example"
-                        >
-                          <option value="1"></option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-md-1">
-                        <label for="inputClass" class="col-form-label"></label>
-                      </div>
-                      <div class="col-md-2">
-                        <label for="inputClass" class="col-form-label">
-                          Posting
-                        </label>
-                      </div>
-                      <div class="col-md-3">
-                        <select
-                          class="form-select"
-                          aria-label="Default select example"
-                        >
-                          <option value="1"></option>
-                        </select>
+                      <div class="col-md-4 px-0">
+                        <textarea
+                          class="form-control"
+                          id="exampleFormControlTextarea1"
+                          rows="1"
+                        ></textarea>
                       </div>
                     </div>
 
@@ -515,53 +493,49 @@
             <div class="card">
               <div class="card-body">
                 <div class="card-title">
-                  <h5 class="text-dark text-center">Edit Promotion Info</h5>
+                  <h5 class="text-dark text-center">
+                    Edit Disciplinary Actions Info
+                  </h5>
                   <hr />
                 </div>
                 <form>
                   <div class="row align-items-center g-2">
                     <div class="row">
+                      <div class="col-md-3 pe-0">
+                        <label for="inputClass" class="col-form-label"
+                          >Disciplinary Case Filed</label
+                        >
+                      </div>
+                      <div class="col-md-1 px-0">
+                        <input
+                          class="form-check-input mt-2"
+                          type="checkbox"
+                          value=""
+                          id="flexCheckDefault"
+                        />
+                      </div>
+                      <div style="margin-left: -5px" class="col-md-2 px-0">
+                        <label for="inputClass" class="col-form-label"
+                          >Proceeding Drawn</label
+                        >
+                      </div>
                       <div class="col-md-1">
-                        <label for="inputClass" class="col-form-label"></label>
-                      </div>
-                      <div class="col-md-2">
-                        <label for="inputClass" class="col-form-label"
-                          >Designation</label
-                        >
-                      </div>
-                      <div class="col-md-3">
-                        <select
-                          class="form-select"
-                          aria-label="Default select example"
-                        >
-                          <option value="1"></option>
-                        </select>
-                      </div>
-                      <div class="col-md-2">
-                        <label for="inputClass" class="col-form-label"
-                          >Nature of Prom</label
-                        >
-                      </div>
-                      <div class="col-md-3">
-                        <select
-                          class="form-select"
-                          aria-label="Default select example"
-                        >
-                          <option value="1"></option>
-                        </select>
+                        <input
+                          class="form-check-input mt-2"
+                          type="checkbox"
+                          value=""
+                          id="flexCheckDefault"
+                        />
                       </div>
                     </div>
 
                     <div class="row">
-                      <div class="col-md-1">
-                        <label for="inputClass" class="col-form-label"></label>
-                      </div>
-                      <div class="col-md-2">
+                      <div class="col-md-3 pe-0">
                         <label for="inputClass" class="col-form-label"
-                          >Memo No.</label
+                          >Nature of Offence</label
                         >
                       </div>
-                      <div class="col-md-3">
+                      <div class="col-md-3 px-0">
                         <input
                           class="form-control"
                           type="text"
@@ -569,68 +543,50 @@
                           value=""
                         />
                       </div>
-                      <div class="col-md-2">
+                      <div class="col-md-2 pe-0">
                         <label for="inputClass" class="col-form-label"
-                          >Memo Date</label
+                          >Punishment</label
                         >
                       </div>
-                      <div class="col-md-3">
+                      <div class="col-md-4 px-0">
+                        <input
+                          class="form-control"
+                          type="text"
+                          maxlength="50"
+                          value=""
+                        />
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col-md-3 pe-0">
+                        <label for="inputClass" class="col-form-label"
+                          >Date</label
+                        >
+                      </div>
+                      <div class="col-md-3 px-0">
                         <input class="form-control" type="date" />
                       </div>
-                    </div>
-
-                    <div class="row">
-                      <div class="col-md-1">
-                        <label for="inputClass" class="col-form-label"></label>
-                      </div>
-
-                      <div class="col-md-2">
-                        <label for="inputClass" class="col-form-label"
-                          >Joining Date</label
-                        >
-                      </div>
-                      <div class="col-md-3">
-                        <input class="form-control" type="date" />
-                      </div>
-                      <div class="col-md-2">
+                      <div class="col-md-2 pe-0">
                         <label for="inputClass" class="col-form-label">
-                          Pay Scale
+                          Remarks
                         </label>
                       </div>
-                      <div class="col-md-3">
-                        <select
-                          class="form-select"
-                          aria-label="Default select example"
-                        >
-                          <option value="1"></option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-md-1">
-                        <label for="inputClass" class="col-form-label"></label>
-                      </div>
-                      <div class="col-md-2">
-                        <label for="inputClass" class="col-form-label">
-                          Posting
-                        </label>
-                      </div>
-                      <div class="col-md-3">
-                        <select
-                          class="form-select"
-                          aria-label="Default select example"
-                        >
-                          <option value="1"></option>
-                        </select>
+                      <div class="col-md-4 px-0">
+                        <textarea
+                          class="form-control"
+                          id="exampleFormControlTextarea1"
+                          rows="1"
+                        ></textarea>
                       </div>
                     </div>
 
-                    <div class="row">
-                      <div class="col-md-12 text-center">
-                        <button type="submit" class="btn btn-success py-0">
-                          Edit
-                        </button>
-                      </div>
+                    <div class="row"></div>
+
+                    <div class="col-md-12 text-center">
+                      <button type="submit" class="btn btn-success py-0">
+                        Edit
+                      </button>
                     </div>
                   </div>
                 </form>
