--- a/PDS Info Update/Promotion Particulars.html
+++ b/PDS Info Update/Promotion Particulars.html
@@ -192,8 +192,8 @@
                       <li>
                         <a href="Previous Services.html">Previous Services</a>
                       </li>
-                      <li>
-                        <a href="app-emailbox.html">Official Information</a>
+                     <li>
+                        <a href="Official Info.html">Official Information</a>
                       </li>
                       <li>
                         <a href="Promotion Particulars.html"
@@ -206,7 +206,7 @@
                       <li><a href="app-emailbox.html">ACR History</a></li>
                      <li><a href="Leave History.html">leave History</a></li>
                       <li><a href="app-emailbox.html">Posting</a></li>
-                      <li><a href="app-emailbox.html">Lien Info.</a></li>
+                      <li><a href="Lien Info.html">Lien Info.</a></li>
                       <li><a href="app-emailbox.html">Job Status</a></li>
                       <li><a href="app-emailbox.html">Change Password</a></li>
                     </ul>
