--- a/PDS Info Update/Official Info.html
+++ b/PDS Info Update/Official Info.html
@@ -428,7 +428,7 @@
                       <input class="form-control" type="text" />
                     </div>
                     <div class="col-md-3">
-                      <label for="inputClass" class="col-form-label">
+                      <label for="inputClass" class="col-form-label ps-4">
                         BSC Batch:
                       </label>
                     </div>
@@ -445,8 +445,8 @@
                     <div class="col-md-3">
                       <select id="inputDistrict" class="form-select"></select>
                     </div>
-                    <div class="col-md-3">
-                      <label for="inputClass" class="col-form-label"
+                    <div class="col-md-3 ">
+                      <label for="inputClass" class="col-form-label ps-4"
                         >Grade:
                       </label>
                     </div>
@@ -464,7 +464,7 @@
                       <select id="inputReligion" class="form-select"></select>
                     </div>
                     <div class="col-md-3">
-                      <label for="inputClass" class="col-form-label">
+                      <label for="inputClass" class="col-form-label ps-4">
                         Current Desig.:
                       </label>
                     </div>
@@ -482,7 +482,7 @@
                       <select id="inputGroup" class="form-select"></select>
                     </div>
                     <div class="col-md-3">
-                      <label for="inputClass" class="col-form-label">
+                      <label for="inputClass" class="col-form-label ps-4">
                         Job Status:
                       </label>
                     </div>
