--- a/PDS Info Update/Official Info.html
+++ b/PDS Info Update/Official Info.html
@@ -196,7 +196,7 @@
                         <a href="Official Info.html">Official Information</a>
                       </li>
                       <li>
-                        <a href="app-emailbox.html">Promotion Particulars</a>
+                        <a href="Promotion Particulars.html">Promotion Particulars</a>
                       </li>
                       <li>
                         <a href="Displinary Action.html"
@@ -429,7 +429,7 @@
                     </div>
                     <div class="col-md-3">
                       <label for="inputClass" class="col-form-label ps-4">
-                        BSC Batch:
+                        BCS Batch:
                       </label>
                     </div>
                     <div class="col-md-3">
